--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -72,11 +72,15 @@
         </div>
     </div>
 
+    <h2>COFFEE! COFFEE! COFFEE!</h2>
+    <p>There are two characteristics of everyday life that most of us can agree on, the color of the sky and coffee. Many of us consider coffee to be an essential component to our everyday lives; consumed throughout the day, every day. 
+    Coffee is relatable because, like us, it comes in many different flavors, from many different places. Each type just as unique as where it comes from. </p>
 
+    <p>These interactive features will help visualize the origins of coffee beans from around the world and understand how geographical factors influence the flavor profile of coffee.</p>
+    
     <h2>Flavor Wheel</h2>
-    <p>The top 8 coffee producing countries. Spin the wheel to view a brief coffee bean summary. 
-    The flavor profiles describe those slight pallet characteristics. 
-    As well as roasting and brewing suggestions for best coffee taste. </p>
+    <p>The top 8 coffee producing countries. Spin the wheel to view a brief coffee bean summary. The flavor profiles describe those slight pallet characteristics.</p>
+    <p>As well as roasting and brewing suggestions for best coffee taste.</p>
 
     <h2>Interactive Coffee Bean Map</h2>
     <p>Paragraph 2</p>
