--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -39,9 +39,7 @@
     <div class="dropdown">
         <button>Flavor Wheel/HOME</button>
         <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="homepage_index.html">Flavor Wheel/Home</a>
         </div>
     </div>
 
