--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -80,10 +80,10 @@
 
     <h2>Interactive Coffee Bean Map</h2>
     <p>Interactive Coffee Bean Origin Map 
-        Explore the vibrant world of coffee, where rich aromas and diverse flavors originate from the finest coffee-growing regions across the globe!
-        Our interactive map showcases the top coffee-producing countries, highlighting the unique characteristics that make each bean special.
-        Discover how geography influences flavor profiles, from the nutty notes of Brazil to the fruity bursts of Ethiopia. Whether you’re a coffee connoisseur or just starting your journey,
-        dive in and see how your favorite brews are born!
+        Dive into the world of coffee production with our interactive map, showcasing the top coffee-growing countries around the globe!
+        Discover the scale and significance of coffee cultivation, highlighting regions that contribute to your favorite brews.
+        From the vast plantations in Brazil to the mountainous farms in Colombia, each area plays a crucial role in bringing coffee from seed to cup.
+        Explore how these diverse regions impact the quantity and quality of coffee produced, making each sip a unique experience!
         </p>
 
     <h2>Coffee Exports/Imports Map</h2>
