--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -51,16 +51,14 @@
     </div>
 
     <div class="dropdown">
-        <button>Coffee Exports/Imports Map</button>
+        <button>Arabica Production and Coffee Exports</button>
         <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="#">/html/index.html</a>
         </div>
     </div>
 
     <div class="dropdown">
-        <button>Arabica/Robusta Production Map</button>
+        <button>Robusta Production and Coffee Imports</button>
         <div class="dropdown-content">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
