--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -53,7 +53,7 @@
     <div class="dropdown">
         <button>Arabica Production and Coffee Exports</button>
         <div class="dropdown-content">
-            <a href="#">/html/index.html</a>
+            <a href="#">html/index.html</a>
         </div>
     </div>
 
@@ -61,8 +61,6 @@
         <button>Robusta Production and Coffee Imports</button>
         <div class="dropdown-content">
             <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
         </div>
     </div>
 
