--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -53,7 +53,7 @@
     <div class="dropdown">
         <button>Arabica Production and Coffee Exports</button>
         <div class="dropdown-content">
-            <a href="#">html/index.html</a>
+            <a href="html/index.html">Arabica Production</a>
         </div>
     </div>
 
