--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -82,8 +82,8 @@
         Explore how these diverse regions impact the quantity and quality of coffee produced, making each sip a unique experience!
         </p>
 
-    <h2>Coffee Exports/Imports Map</h2>
-    <p>Paragraph 3</p>
+    <h2>Arabica Production and Coffee Exports</h2>
+    <p>Shows a heatmap of where Arabica Coffee is produced as well as where coffee is exported. Compares Arabica production and coffee exports throughout the years.</p>
 
     <h2>Arabica/Robust Production Map</h2>
     <p>Paragraph 4</p>
