Update homepage_index.html w/ Robusta

--- a/homepage_css/homepage_index.html
+++ b/homepage_css/homepage_index.html
@@ -60,7 +60,7 @@
     <div class="dropdown">
         <button>Robusta Production and Coffee Imports</button>
         <div class="dropdown-content">
-            <a href="#">Link 1</a>
+            <a href="html/index.html">Robusta Production</a>
         </div>
     </div>
 
@@ -83,10 +83,10 @@
         </p>
 
     <h2>Arabica Production and Coffee Exports</h2>
-    <p>Shows a heatmap of where Arabica Coffee is produced as well as where coffee is exported. Compares Arabica production and coffee exports throughout the years.</p>
+    <p>Shows a heatmap of where Arabica Coffee is produced as well as where all coffee is exported. Compares Arabica production and coffee exports throughout the years.</p>
 
-    <h2>Arabica/Robust Production Map</h2>
-    <p>Paragraph 4</p>
+    <h2>Robusta Production and Coffee Imports</h2>
+    <p>Heatmap showing where Robusta coffee is produced and where both Arabica and Robusta coffee is imported through the past several years.</p>
 
 
     <div class="wheel">
